add resource, add productService logic
