# app/Http/Resources/Storages/StockResource.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources\Storages;
+
+use App\Models\Storages\Stock;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/** @mixin Stock */
+class StockResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'uuid' => $this->uuid,
+            'storage_id' => $this->storage_id,
+            'product_id' => $this->product_id,
+            'quantity' => $this->quantity,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
